# algorithm_solving

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cph/: .B_Trifecta.cpp_4f2473c70ddf48f4a1640173d1f788ac.prob
AcWing/: AcWing3476.cpp  AcWing3477.cpp  AcWing3598.cpp  AcWing3602.cpp  AcWing3644.cpp  AcWing3645.cpp  AcWing3648.cpp  AcWing3650.cpp  AcWing3651.cpp  AcWing3656.cpp  AcWing3657.cpp  AcWing3692.cpp  AcWing3718.cpp  AcWing4662.cpp  AcWing908.cpp  Acwing3601.cpp  Acwing3654.cpp
Luogu/: B2006.cpp  P1048.cpp  P1059.cpp  P1060.cpp  P1271.cpp  P1591.cpp  P1781.cpp  P2241.cpp  P2676.cpp  P3375.cpp
SCAU2023/: README.md  T1.cpp  T10.cpp  T11.cpp  T12.cpp  T13.cpp  T2.cpp  T3.cpp  T4.cpp  T5.cpp  T6.cpp  T7.cpp  T8.cpp  T9.cpp
atcoder/: A_Black_Square.cpp  B_Two_Languages.cpp  C_Sake_or_Water.cpp  D_Paid_Walk.cpp  E_A_B_substring.cpp
atcoder/.cph/: .A_Black_Square.cpp_21947e6eb99922c11f3539867cd76571.prob  .B_Two_Languages.cpp_2bf609db3cdde9812d50560f27b6af75.prob  .C_Sake_or_Water.cpp_a50da5677f5adabf49b2a1c8c1e6bf31.prob  .C_Striped_Horse.cpp_348902ff8d46b9432ef15a7de5960355.prob  .D_Paid_Walk.cpp_87493f13a38b0548d9bd6649b49e4dfc.prob  .E_A_B_substring.cpp_b2c9b2f5d94283f026570bc61d701774.prob
atcoder/ABC356/: A.cpp  B.cpp
atcoder/ABC356/.cph/: .A.cpp_7f38e4d8212159dba9ac2d3b8e4d85a1.prob  .B.cpp_f31fe6087e113ded7c6b1ad8c390d5a7.prob
codeforces/: A_Operations_with_Inversions.cpp  A_Perfect_Root.cpp  B_Optimal_Shifts.cpp  B_Prefix_Max.cpp  C_Inhabitant_of_the_Deep_Sea.cpp  C_Shifted_MEX.cpp  D_OutOfMemoryError.cpp  E_The_Robotic_Rush.cpp
codeforces/.cph/: .A_Operations_with_Inversions.cpp_7bf980d4a697ca5aedc77eb0f0aed6c0.prob  .B_Optimal_Shifts.cpp_777ebfd79689e89d5b0ac318241be38e.prob  .CF6A.cpp_2139540dc8e19739fac6e8dafbba6783.prob
exam/digital20240415/: A.java  B.java  C.java  README.md
leetcode/: 3562.折扣价交易股票的最大利润.cpp
leetcode/contests/bi131/: B131A.cpp  B131B.cpp  B131C.cpp
leetcode/contests/contest387/: B.cpp
leetcode/contests/contest388/: A.cpp
leetcode/contests/contest389/: A.cpp  C.cpp
leetcode/contests/contest393/: A.java  B.java
leetcode/contests/contest394/: A.java  B.java
leetcode/contests/contest395/: A.java  C.java
leetcode/contests/contest397/: A.java  C.cpp
leetcode/contests/contest398/: A.cpp  B.cpp
leetcode/contests/double126/: B.cpp  C.cpp
leetcode/contests/double129/: B.java
leetcode/contests/double130/: B.cpp
leetcode/contests/doubleContest125/: A.cpp  B.cpp  C.cpp
leetcode/cpp/: LCP61.cpp  LeetCode100.cpp  LeetCode104.cpp  LeetCode108.cpp  LeetCode1103.cpp  LeetCode1343.cpp  LeetCode1456.cpp  LeetCode19.cpp  LeetCode2028.cpp  LeetCode206.cpp  LeetCode21.cpp  LeetCode257.cpp  LeetCode2748.cpp  LeetCode2951.cpp  LeetCode2982.cpp  LeetCode3080.cpp  LeetCode881.cpp  LeetCode98.cpp
leetcode/cpp/contests/: LeetCode82.cpp
leetcode/cpp/contests/contest387/: A.cpp  C.cpp
leetcode/cpp/contests/contest388/: B.cpp  C.cpp
leetcode/cpp/contests/contest389/: B.cpp
leetcode/cpp/contests/contest395/: B.java
leetcode/cpp/contests/contest397/: B.java
leetcode/cpp/contests/contest398/: C.cpp
leetcode/cpp/contests/contest400/: Contest400A.cpp  Contest400B.cpp  Contest400C.cpp
leetcode/cpp/contests/double126/: A.cpp
leetcode/cpp/contests/double129/: A.java  C.java
leetcode/cpp/contests/double130/: A.java  B.java  C.java
leetcode/cpp/contests/weekly399/: A.cpp  B.cpp  C.cpp
leetcode/editor/cn/: LeetCode10.cpp  LeetCode1002.cpp  LeetCode1029.cpp  LeetCode1041.cpp  LeetCode1047.cpp  LeetCode1051.cpp  LeetCode1053.cpp  LeetCode1068.cpp  LeetCode1079.cpp  LeetCode1081.cpp  LeetCode1090.cpp  LeetCode110.cpp  LeetCode1103.cpp  LeetCode1109.cpp  LeetCode111.cpp  LeetCode1114.cpp  LeetCode1130.cpp  LeetCode1146.cpp  LeetCode1170.cpp  LeetCode118.cpp  LeetCode119.cpp  LeetCode12.cpp  LeetCode1203.cpp  LeetCode1209.cpp  LeetCode1219.cpp  LeetCode123.cpp  LeetCode1237.cpp  LeetCode1238.cpp  LeetCode125.cpp  LeetCode1261.cpp  LeetCode131.cpp  LeetCode1324.cpp  LeetCode1326.cpp  LeetCode1328.cpp  LeetCode1330.cpp  LeetCode1338.cpp  LeetCode135.cpp  LeetCode1353.cpp  LeetCode1362.cpp  LeetCode137.cpp  (+247 more)
leetcode/editor/cn/doc/content/: LeetCode10.md  LeetCode1002.md  LeetCode1029.md  LeetCode1041.md  LeetCode1047.md  LeetCode1051.md  LeetCode1053.md  LeetCode1068.md  LeetCode1079.md  LeetCode1081.md  LeetCode1090.md  LeetCode110.md  LeetCode1103.md  LeetCode1109.md  LeetCode111.md  LeetCode1114.md  LeetCode1130.md  LeetCode1146.md  LeetCode1170.md  LeetCode118.md  LeetCode119.md  LeetCode12.md  LeetCode1203.md  LeetCode1209.md  LeetCode1219.md  LeetCode123.md  LeetCode1237.md  LeetCode1238.md  LeetCode125.md  LeetCode1261.md  LeetCode131.md  LeetCode1324.md  LeetCode1326.md  LeetCode1328.md  (+257 more)
leetcode/hot100/: LeetCode3.cpp
leetcode/java/: LeetCode1026.java  LeetCode2007.java  LeetCode216.java  LeetCode2192.java  LeetCode2923.java  LeetCode377.java  LeetCode705.java  TreeNode.java
leetcode/java/leetcode/: Leetcode1452.java
leetcode/leetcode/editor/cn/: 994腐烂的橘子.cpp  LeetCode994.cpp  [994]腐烂的橘子.cpp  [994]腐烂的橘子.java
nowcoder/: 枚举_例_1_铺地毯.cpp
nowcoder/.cph/: .枚举_例_1_铺地毯.cpp_a788132afd380f822b842b8aee58eb43.prob
nowcoder/Practice122/: B.cpp  C.cpp
nowcoder/Rookie87/: A.cpp
nowcoder/round29/: A.cpp  B.cpp  C.cpp
nowcoder/round36/: A.cpp  B.cpp  C.cpp  D.cpp
others/: Kmp.cpp  SimpleTest.cpp
templates/: temp_codeforces.cpp  temp_others.cpp
(+141 files in other folders)
