cmake_minimum_required(VERSION 3.28)
project(algorithm_solving)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm_solving main.cpp)

add_executable(LeetCode797 leetcode/editor/cn/LeetCode797.cpp)
add_executable(LeetCode980 leetcode/editor/cn/LeetCode980.cpp)
add_executable(LeetCode491 leetcode/editor/cn/LeetCode491.cpp)
add_executable(LeetCode1079 leetcode/editor/cn/LeetCode1079.cpp)
add_executable(LeetCode164 leetcode/editor/cn/LeetCode164.cpp)
add_executable(LeetCode581 leetcode/editor/cn/LeetCode581.cpp)
add_executable(LeetCode217 leetcode/editor/cn/LeetCode217.cpp)
add_executable(LeetCode494 leetcode/editor/cn/LeetCode494.cpp)
add_executable(LeetCode229 leetcode/editor/cn/LeetCode229.cpp)
add_executable(LeetCode1609 leetcode/editor/cn/LeetCode1609.cpp)
add_executable(LeetCode153 leetcode/editor/cn/LeetCode153.cpp)
add_executable(LeetCode162 leetcode/editor/cn/LeetCode162.cpp)
add_executable(LeetCode729 leetcode/editor/cn/LeetCode729.cpp)
add_executable(LeetCode731 leetcode/editor/cn/LeetCode731.cpp)
add_executable(LeetCode125 leetcode/editor/cn/LeetCode125.cpp)
add_executable(LeetCode58 leetcode/editor/cn/LeetCode58.cpp)
add_executable(LeetCode191 leetcode/editor/cn/LeetCode191.cpp)
add_executable(SimpleTest others/SimpleTest.cpp)
add_executable(LeetCode5 leetcode/editor/cn/LeetCode5.cpp)
add_executable(LeetCode2244 leetcode/editor/cn/LeetCode2244.cpp)
add_executable(LeetCode2644 leetcode/editor/cn/LeetCode2644.cpp)
add_executable(LeetCode1535 leetcode/editor/cn/LeetCode1535.cpp)
add_executable(C leetcode/contests/weekly399/C.cpp)
add_executable(B leetcode/contests/weekly399/B.cpp)
add_executable(A leetcode/contests/contest398/A.cpp)
add_executable(LeetCode2225 leetcode/editor/cn/LeetCode2225.cpp)
add_executable(LeetCode1441 leetcode/editor/cn/LeetCode1441.cpp)
add_executable(LeetCode2903 leetcode/editor/cn/LeetCode2903.cpp)
add_executable(LeetCode2905 leetcode/editor/cn/LeetCode2905.cpp)
add_executable(B131C leetcode/contests/bi131/B131C.cpp)
add_executable(B131B leetcode/contests/bi131/B131B.cpp)
add_executable(B131A leetcode/contests/bi131/B131A.cpp)
add_executable(LeetCode1738 leetcode/editor/cn/LeetCode1738.cpp)
