cmake_minimum_required(VERSION 3.28)
project(algorithm_solving)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm_solving main.cpp)

add_executable(LeetCode206 leetcode/cpp/LeetCode206.cpp)
add_executable(LeetCode141 leetcode/editor/cn/LeetCode141.cpp)
add_executable(LeetCode83 leetcode/editor/cn/LeetCode83.cpp)